# k_printf

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  k_printf_hdl_gelistirme_notu.md
cmake/: msp430-toolchain.cmake
docs/: Doxyfile  README.tr.md
docs/hdl/: fmt_isa.md
examples/: main.c  uart_ringbuf.c
hdl/: Makefile  README.md
hdl/fmt/: messages.h  messages_min.h
hdl/gold/: kp_gold.c
hdl/rtl/sv/: kp_axil.sv  kp_capture.sv  kp_core.sv  kp_regs.sv  kp_tee.sv  kp_trig.sv  kp_uart_tx.sv  kp_wb.sv
hdl/rtl/vhdl/: kp_axil.vhd  kp_capture.vhd  kp_core.vhd  kp_regs.vhd  kp_tee.vhd  kp_trig.vhd  kp_uart_tx.vhd  kp_wb.vhd
hdl/tb/: kp_bus_tb.sv  kp_bus_tb.vhd  kp_regs_tb.sv  kp_regs_tb.vhd  kp_sys_tb.sv  kp_sys_tb.vhd  kp_tb.sv  kp_tb.vhd  kp_uart_tb.sv  kp_uart_tb.vhd  run_ghdl.sh
include/: k_printf.h
k_printf/: Makefile  README.md
src/: k_printf.c
tests/: fuzz_k_printf.c  test_k_printf.c  test_optout.c
tools/: k_fmtgen.py
